# mtg-sdk-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/api/: error.rs  mod.rs  response.rs  util.rs
src/api/card/: card_api.rs  filter.rs  filtertypes.rs  mod.rs
src/api/format/: format_api.rs  mod.rs
src/api/set/: filter.rs  filtertypes.rs  mod.rs  set_api.rs
src/api/types/: mod.rs  type_api.rs
src/model/: card.rs  format.rs  mod.rs  set.rs  types.rs
