[package]
name = "mtgapi-client"
version = "0.1.1"
authors = ["Alexander Wendt <alexwgh1+mtgio@gmail.com>"]
homepage = "https://github.com/MagicTheGathering/mtg-sdk-rust"
repository = "https://github.com/MagicTheGathering/mtg-sdk-rust"
documentation = "https://docs.rs/mtgapi-client"
license = "MIT"
description = "API bindings for www.magicthegathering.io"
readme = "README.md"
keywords = ["mtg", "magic", "gathering", "magic-the-gathering", "api"]
categories = ["api-bindings"]
edition = "2018"

[dependencies]
reqwest = "0.9.24"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
itertools = "0.9.0"
hyper = "0.13.3"
failure = "0.1"
failure_derive = "0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"